autograder/src/main/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\PIERCE\Desktop\OOP2-Development
-d
C:\Users\PIERCE\Desktop\OOP2-Development\doc
-encoding
windows-1252
-charset
windows-1252
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java
<---- end of javadoc command ---->
Loading source file C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java...
Constructing Javadoc information...
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:7: error: package com.itextpdf.text does not exist
import com.itextpdf.text.Document;  
                        ^
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:8: error: package com.itextpdf.text does not exist
import com.itextpdf.text.DocumentException;
                        ^
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:9: error: package com.itextpdf.text does not exist
import com.itextpdf.text.Paragraph;
                        ^
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:10: error: package com.itextpdf.text does not exist
import com.itextpdf.text.Phrase;
                        ^
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:11: error: package com.itextpdf.text.pdf does not exist
import com.itextpdf.text.pdf.PdfPCell;
                            ^
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:12: error: package com.itextpdf.text.pdf does not exist
import com.itextpdf.text.pdf.PdfPTable;
                            ^
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:13: error: package com.itextpdf.text.pdf does not exist
import com.itextpdf.text.pdf.PdfWriter;
                            ^
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:14: error: package com.itextpdf.text does not exist
import com.itextpdf.text.Element;
                        ^
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\ReportGeneratorTemplate.java:3: error: package com.itextpdf.text does not exist
import com.itextpdf.text.Document;  
                        ^
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:71: error: cannot find symbol
    protected void addRecommendationsTable(Document document){
                                           ^
  symbol:   class Document
  location: class PDFGenerator
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:121: error: cannot find symbol
    protected void createFailedTable(Document document){
                                     ^
  symbol:   class Document
  location: class PDFGenerator
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:172: error: cannot find symbol
    protected void createTable(Document document) {
                               ^
  symbol:   class Document
  location: class PDFGenerator
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\PDFGenerator.java:222: error: package com.itextpdf.text does not exist
    private com.itextpdf.text.Font getCellFont() {
                             ^
C:\Users\PIERCE\Desktop\OOP2-Development\autograder\src\main\java\oop2_project\ReportGeneratorTemplate.java:12: error: cannot find symbol
    protected abstract void createTable(Document document);
                                        ^
  symbol:   class Document
  location: class ReportGeneratorTemplate
14 errors
